--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   text-align: center;
 }
 
+/* Image area */
 #image-area {
   width: 100%;
   height: 420px;
@@ -19,21 +20,34 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
-#image-area img {
+#image-placeholder {
+  width: 100%;
+  height: 100%;
+  background: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#dessert-img {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+  position: relative;
+  display: none;
 }
 
+/* Lower third */
 #lower-third {
   background: #990000;
   padding: 15px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  color: white;
   align-items: center;
+  color: white;
   margin-top: 10px;
 }
 
@@ -72,6 +86,7 @@ body {
   font-weight: bold;
 }
 
+/* Controls */
 #controls {
   margin-top: 15px;
   display: flex;
